--- a/Css/messages.css
+++ b/Css/messages.css
@@ -324,3 +324,13 @@ footer {
         max-height: calc(40vh - 60px);
     }
 }
+
+
+.online-indicator {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background-color: green;
+    border-radius: 50%;
+    margin-right: 5px;
+}
